<resources>
    <string name="app_name">Project</string>
    <string name="Update">Update</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="edit_book">Edit Book</string>
    <string name="author">Author</string>
    <string name="add_book">Add Book</string>
    <string name="details">Details</string>
    <string name="meaning">Meaning</string>
    <string name="synonyms">Synonyms</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="word_details">Word Details</string>
    <string name="detail">Detail</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="test">test</string>
    <string name="text">text</string>
    <string name="cancel">Cancel</string>
    <string name="add_new_task">Add New Task</string>
    <string name="fab_button">fab button</string>
    <string name="add_new">Add New</string>
    <string name="update">Update</string>
    <string name="task_details">Task Details</string>
    <string name="update_task">Update Task</string>
    <string name="sort_by">Sort By</string>
    <string name="date">Date</string>
</resources>