<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
<!--        <variable-->
<!--            name="displayBook"-->
<!--            type="com.example.project.data.model.Task" />-->
        <variable
            name="editBook"
            type="com.example.project.ui.updateTask.UpdateViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/l"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ui.addTask.AddFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/update_task"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/title" />

        <EditText
            style="@style/Project.EditText"
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xs"
            android:hint="@string/title"
            android:text="@={editBook.title}" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/meaning" />

        <EditText
            android:id="@+id/etMean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xs"
            style="@style/Project.EditText"
            android:text="@={editBook.mean}"
            android:hint="@string/meaning" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/synonyms" />

        <EditText
            android:id="@+id/etSyn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xs"
            style="@style/Project.EditText"
            android:text="@={editBook.syn}"
            android:hint="@string/synonyms" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xl"
            android:text="@string/details" />

        <EditText
            style="@style/Project.EditText"
            android:id="@+id/etDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xs"
            android:gravity="start"
            android:hint="@string/details"
            android:minLines="5"
            android:text="@={editBook.detail}" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/xxxxxxxxl"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue"
                android:onClick="@{() -> editBook.update()}"
                android:text="@string/Update" />
        </LinearLayout>
    </LinearLayout>
</layout>